--- a/apps/v4/styles/globals.css
+++ b/apps/v4/styles/globals.css
@@ -1,19 +1,19 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-@import "../registry/styles/default.css" layer(base);
-@import "../registry/styles/nova.css" layer(base);
-@import "../registry/styles/lyra.css" layer(base);
-@import "../registry/styles/maia.css" layer(base);
+@import "../registry/styles/style-default.css" layer(base);
+@import "../registry/styles/style-nova.css" layer(base);
+@import "../registry/styles/style-lyra.css" layer(base);
+@import "../registry/styles/style-maia.css" layer(base);
 
 @custom-variant style-default (&:where(.style-default *));
 @custom-variant style-nova (&:where(.style-nova *));
 @custom-variant style-lyra (&:where(.style-lyra *));
 @custom-variant style-maia (&:where(.style-maia *));
 
-@import "../registry/themes/neutral.css";
-@import "../registry/themes/blue.css";
-@import "../registry/themes/red.css";
+@import "../registry/themes/theme-neutral.css";
+@import "../registry/themes/theme-blue.css";
+@import "../registry/themes/theme-red.css";
 
 @custom-variant dark (&:is(.dark *));
 @custom-variant fixed (&:is(.layout-fixed *));
@@ -169,7 +169,7 @@
   }
 
   [data-slot="layout"] {
-    @apply 3xl:p-2 3xl:fixed:p-0 overscroll-none;
+    @apply overscroll-none;
   }
 
   @supports (font: -apple-system-body) and (-webkit-appearance: none) {
