--- a/apps/v4/registry/styles/style-lyra.css
+++ b/apps/v4/registry/styles/style-lyra.css
@@ -20,51 +20,51 @@
   .cn-button {
     @apply border border-transparent text-sm [&_svg:not([class*='size-'])]:size-3.5;
 
-    &[data-variant="default"] {
+    &.cn-button-variant-default {
       @apply text-primary-foreground bg-primary hover:bg-primary/90;
     }
 
-    &[data-variant="outline"] {
+    &.cn-button-variant-outline {
       @apply border-border bg-background hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50;
     }
 
-    &[data-variant="secondary"] {
+    &.cn-button-variant-secondary {
       @apply bg-secondary text-secondary-foreground hover:bg-secondary/80;
     }
 
-    &[data-variant="ghost"] {
+    &.cn-button-variant-ghost {
       @apply hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50;
     }
 
-    &[data-variant="destructive"] {
+    &.cn-button-variant-destructive {
       @apply bg-destructive hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60 text-white;
     }
 
-    &[data-variant="link"] {
+    &.cn-button-variant-link {
       @apply text-primary underline-offset-4 hover:underline;
     }
 
-    &[data-size="sm"] {
+    &.cn-button-size-sm {
       @apply h-6 gap-1 px-2 has-[>svg:first-child]:pl-1.5 has-[>svg:last-child]:pr-1.5 [&_svg:not([class*='size-'])]:size-3;
     }
 
-    &[data-size="default"] {
+    &.cn-button-size-default {
       @apply h-7 gap-1.5 px-2 has-[>svg:first-child]:pl-1.5 has-[>svg:last-child]:pr-1.5;
     }
 
-    &[data-size="lg"] {
+    &.cn-button-size-lg {
       @apply h-8 gap-1.5 px-2.5 has-[>svg:first-child]:pl-2 has-[>svg:last-child]:pr-2 [&_svg:not([class*='size-'])]:size-4;
     }
 
-    &[data-size="icon-sm"] {
+    &.cn-button-size-icon-sm {
       @apply size-6;
     }
 
-    &[data-size="icon"] {
+    &.cn-button-size-icon {
       @apply size-7;
     }
 
-    &[data-size="icon-lg"] {
+    &.cn-button-size-icon-lg {
       @apply size-8;
     }
   }
@@ -101,84 +101,3 @@
     @apply border-input border px-2 py-1.5 text-base md:text-sm;
   }
 }
-
-/* .theme-lyra {
-  --font-sans: var(--font-mono) !important;
-  --primary: var(--color-neutral-700);
-  --primary-foreground: var(--color-neutral-50);
-  --radius: 0 !important;
-  --text-sm: 0.8rem;
-
-  @variant dark {
-    --primary: var(--color-neutral-100);
-    --primary-foreground: var(--color-neutral-900);
-  }
-
-  .cn-badge {
-    @apply rounded-none! shadow-none!;
-  }
-
-  .cn-button {
-    @apply rounded-none!;
-  }
-
-  .cn-button[data-variant="outline"] {
-    @apply shadow-none!;
-  }
-
-  .cn-button[data-size="sm"] {
-    @apply h-7!;
-  }
-
-  .cn-button[data-size="default"] {
-    @apply h-8;
-  }
-
-  .cn-button[data-size="lg"] {
-    @apply h-9!;
-  }
-
-  .cn-button[data-size="icon-sm"] {
-    @apply size-7!;
-  }
-
-  .cn-button[data-size="icon-lg"] {
-    @apply size-9!;
-  }
-
-  .cn-button[data-size="icon"] {
-    @apply size-8!;
-  }
-
-  .cn-checkbox {
-    @apply rounded-none! shadow-none!;
-  }
-
-  .cn-input {
-    @apply border-input h-8 border px-2;
-  }
-
-  .cn-textarea {
-    @apply rounded-none! px-2! shadow-none!;
-  }
-
-  .cn-select-trigger {
-    @apply h-8! rounded-none! px-2! shadow-none! data-[size=sm]:h-7!;
-  }
-
-  .cn-input-group {
-    @apply h-8! rounded-none! shadow-none! has-[>[data-align=block-end]]:h-auto!;
-  }
-
-  .cn-item {
-    @apply rounded-none!;
-  }
-
-  .cn-item[data-size="sm"] {
-    @apply gap-2! px-2! py-2!;
-  }
-
-  .cn-item[data-size="default"] {
-    @apply gap-2! p-2.5!;
-  }
-} */
