--- a/apps/v4/registry/styles/style-nova.css
+++ b/apps/v4/registry/styles/style-nova.css
@@ -18,51 +18,51 @@
   .cn-button {
     @apply rounded-lg border border-transparent text-sm inset-shadow-2xs inset-shadow-white/25 [&_svg:not([class*='size-'])]:size-4;
 
-    &[data-variant="default"] {
+    &.cn-button-variant-default {
       @apply text-primary-foreground bg-linear-to-b from-[color-mix(in_oklch,var(--primary)_85%,var(--background))] to-(--primary) hover:bg-linear-to-t;
     }
 
-    &[data-variant="outline"] {
+    &.cn-button-variant-outline {
       @apply border-border bg-linear-to-b from-[color-mix(in_oklch,var(--accent)_25%,var(--background))] to-(--accent) shadow-none hover:bg-linear-to-t;
     }
 
-    &[data-variant="secondary"] {
+    &.cn-button-variant-secondary {
       @apply bg-secondary text-secondary-foreground hover:bg-secondary/80;
     }
 
-    &[data-variant="ghost"] {
+    &.cn-button-variant-ghost {
       @apply hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50;
     }
 
-    &[data-variant="destructive"] {
+    &.cn-button-variant-destructive {
       @apply bg-linear-to-b from-[color-mix(in_oklch,var(--destructive)_85%,var(--background))] to-(--destructive) text-white hover:bg-linear-to-t;
     }
 
-    &[data-variant="link"] {
+    &.cn-button-variant-link {
       @apply text-primary underline-offset-4 hover:underline;
     }
 
-    &[data-size="sm"] {
+    &.cn-button-size-sm {
       @apply h-7 gap-1 px-2.5 has-[>svg]:px-2.5;
     }
 
-    &[data-size="default"] {
+    &.cn-button-size-default {
       @apply h-8 gap-1.5 px-3 has-[>svg]:px-2.5;
     }
 
-    &[data-size="lg"] {
+    &.cn-button-size-lg {
       @apply h-9 gap-2 px-4 has-[>svg]:px-3;
     }
 
-    &[data-size="icon-sm"] {
+    &.cn-button-size-icon-sm {
       @apply size-7;
     }
 
-    &[data-size="icon"] {
+    &.cn-button-size-icon {
       @apply size-8;
     }
 
-    &[data-size="icon-lg"] {
+    &.cn-button-size-icon-lg {
       @apply size-9;
     }
   }
@@ -99,93 +99,3 @@
     @apply bg-input/30 rounded-lg px-3 py-2 text-base transition-colors md:text-sm;
   }
 }
-
-/*
-.cn-alert-dialog-overlay {
-  @apply bg-black/50! duration-100!;
-}
-
-.cn-alert-dialog-content {
-  @apply bg-popover! border-border/40! rounded-xl! p-6! shadow-lg! ring-4 ring-white/40 duration-100! dark:ring-black/40;
-}
-
-.cn-checkbox {
-  --from: color-mix(in oklch, var(--primary) 85%, white);
-  --to: var(--primary);
-  @apply data-[state=checked]:bg-linear-to-b data-[state=checked]:from-(--from) data-[state=checked]:to-(--to);
-}
-
-.cn-dropdown-menu-content,
-.cn-dropdown-menu-sub-content {
-  @apply border-border/40 rounded-xl! border! p-1.5! shadow-2xl!;
-}
-
-.cn-dropdown-menu-label {
-  @apply text-muted-foreground! px-3! py-1.5! text-sm! font-normal!;
-}
-
-.cn-dropdown-menu-item,
-.cn-dropdown-menu-sub-trigger,
-.cn-dropdown-menu-checkbox-item,
-.cn-dropdown-menu-radio-item {
-  @apply gap-3! rounded-lg! px-3! py-2.5! text-sm!;
-}
-
-.cn-dropdown-menu-radio-item {
-  @apply pl-8!;
-}
-
-.cn-dropdown-menu-separator {
-  @apply bg-border/80! -mx-1.5! my-1.5!;
-}
-
-
-.cn-textarea,
-.cn-select-trigger,
-.cn-input-group {
-  @apply bg-input/30! border-transparent! shadow-none!;
-}
-
-.cn-input-group-input {
-  @apply bg-transparent!;
-}
-
-.cn-input-group-textarea {
-  @apply bg-transparent!;
-}
-
-.cn-slider {
-  @apply rounded-full data-[orientation=horizontal]:h-3 data-[orientation=vertical]:w-3;
-}
-
-.cn-slider-thumb {
-  @apply h-6 w-2;
-}
-
-.cn-popover-content {
-  @apply border-border/40 rounded-2xl border p-4 shadow-2xl;
-}
-
-.cn-select-content {
-  @apply rounded-xl! border! shadow-2xl!;
-}
-
-.cn-select-label {
-  @apply px-3! text-sm! font-normal!;
-}
-
-.cn-select-item {
-  @apply rounded-lg! px-2.5! py-2.5! text-sm!;
-}
-
-.cn-popover-content {
-  @apply border-border/40! rounded-2xl! border! shadow-2xl!;
-}
-
-.cn-radio-group-item {
-  @apply data-[state=checked]:border-primary! data-[state=checked]:bg-primary!;
-}
-
-.cn-radio-group-indicator-icon {
-  @apply size-2.5! fill-white!;
-} */
